ændring af grid og styling af grid elementer
Hver h3 overskrift til activities har fået sin egen div og bullet points er fjernet + kommentarer i koden

--- a/prices.html
+++ b/prices.html
@@ -38,8 +38,10 @@
           <li>1 pen drive</li>
         </ul>
       </div>
-      <div class="silver-activities">
+      <div class="silver-more">
         <h3>You will also receive the following activities:</h3>
+      </div>
+      <div class="silver-activities">
         <ul>
           <li>Full day coverage</li>
           <li>Ceremony</li>
@@ -65,8 +67,10 @@
           <li>1 pen drive</li>
         </ul>
       </div>
-      <div class="gold-activities">
+      <div class="gold-more">
         <h3>You will also receive the following activities</h3>
+      </div>
+      <div class="gold-activities">
         <ul>
           <li>Full day coverage</li>
           <li>Ceremony</li>
@@ -90,8 +94,10 @@
           <li>2 DVDs</li>
         </ul>
       </div>
-      <div class="bronze-activities">
+      <div class="bronze-more">
         <h3>You will also receive the following activities</h3>
+      </div>
+      <div class="bronze-activities">
         <ul>
           <li>Full day coverage</li>
           <li>Ceremony</li>
