--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -48,7 +48,7 @@
         <img src="/images/krish-work.jpeg" alt="Our latest work" />
       </div>
       <div class="worktxt">
-        <h3>Our latest work</h3>
+        <h3>OUR LATEST WORK</h3>
         <p>
           Feel free to take a look at our latest work and see if our style is
           something you would like.
@@ -61,7 +61,7 @@
         <img src="/images/book-shoot-krish.jpeg" alt="Book a shoot" />
       </div>
       <div class="booktxt">
-        <h3>Book a shoot</h3>
+        <h3>BOOK A SHOOT</h3>
         <p>
           Want to work with us? Click the button to book a shoot and then we
           will contact you about your vision
@@ -74,7 +74,7 @@
         <img src="/images/team-krish.png" alt="Meet the team" />
       </div>
       <div class="teamtxt">
-        <h3>Meet the team</h3>
+        <h3>MEET THE TEAM</h3>
         <p>Meet our team and see the star photographers behind our work</p>
       </div>
       <div class="team-a">
