--- a/prices.html
+++ b/prices.html
@@ -21,6 +21,9 @@
         <a href="#contact">Contact us</a>
       </div>
     </div>
+    <div class="site-title">
+      <h1>WEDDING PACKAGES</h1>
+    </div>
     <section class="prices">
       <div class="silver-package">
         <h3>Silver package</h3>
@@ -47,6 +50,9 @@
           <li>Ceremony</li>
           <li>Pre-shoot or Post-shoot session</li>
         </ul>
+      </div>
+      <div class="silver-price">
+        <h3>Rs. 265.000</h3>
       </div>
       <div class="silver-a">
         <a href="#">Book now</a>
@@ -77,6 +83,9 @@
           <li>Pre-shoot or Post-shoot session</li>
         </ul>
       </div>
+      <div class="gold-price">
+        <h3>Rs. 385.000</h3>
+      </div>
       <div class="gold-a">
         <a href="#">Book now</a>
       </div>
@@ -103,6 +112,9 @@
           <li>Ceremony</li>
           <li>Pre-shoot or Post-shoot session</li>
         </ul>
+      </div>
+      <div class="bronze-price">
+        <h3>Rs. 185.000</h3>
       </div>
       <div class="bronze-a">
         <a href="#">Book now</a>
