--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -146,20 +146,8 @@
       <div class="bw-second">
         <img src="/images/bwkrish.jpeg" alt="Wedding shoot" />
       </div>
-      <!--Her begynder sektionen med "Meet the team"-->
     </section>
     <!--Her starter anmeldelser-->
-    <section class="reviews">
-      <h2>What our clients say</h2>
-      <p>
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
-        laudantium, ullam accusantium quibusdam ea officiis. Placeat accusantium
-        mollitia magnam. Qui aspernatur rem eveniet magni pariatur ad odio
-        voluptas modi quis."
-      </p>
-      <h4>-Lorem, ipsum.</h4>
-      <hr />
-    </section>
     <section class="footer">
       <div class="contact">
         <h3>Contact</h3>
@@ -186,6 +174,9 @@
         </div>
         <div class="email">
           <a href="krishcreative@outlook.com" target="_blank">Email</a>
+        </div>
+        <div class="logo-footer">
+          <img src="/images/krishlogo.png" alt="logo" />
         </div>
       </div>
     </section>
