Styling af prices pakkerne
+ tilføjelse af ekstra farver til pakkernes border color

I stedet for text-align center er pakkerne stylet til midten ved at bruge margin:left og right med værdien auto

Baggrundsfarve er brugt på både kassen og teksten i classes med content, for at få en fuld baggrundsfarve

--- a/prices.html
+++ b/prices.html
@@ -96,7 +96,7 @@
         <ul>
           <li>1 Photographers</li>
           <li>1 Videographers</li>
-          <li>70 pages 12X30 AlbumGlass top wood</li>
+          <li>70 pages 12X30 Album <br />- Glass top wood</li>
           <li>1 Signature frame</li>
           <li>1 12x18 frame</li>
           <li>1 Blu-rays</li>
