Reducering af grid elementer
Har reduceret brugen af grid div da jeg fandt ud af at jeg kunne samle noget af det i én div. Herunder content og more indhold :+1:

Derudover har de fået en border width på medium

--- a/prices.html
+++ b/prices.html
@@ -40,11 +40,7 @@
           <li>2 blu-rays</li>
           <li>1 pen drive</li>
         </ul>
-      </div>
-      <div class="silver-more">
-        <h3>You will also receive the following activities:</h3>
-      </div>
-      <div class="silver-activities">
+        <h3>You will also receive <br />the following activities:</h3>
         <ul>
           <li>Full day coverage</li>
           <li>Ceremony</li>
@@ -72,11 +68,7 @@
           <li>2 blu-rays</li>
           <li>1 pen drive</li>
         </ul>
-      </div>
-      <div class="gold-more">
-        <h3>You will also receive the following activities</h3>
-      </div>
-      <div class="gold-activities">
+        <h3>You will also receive <br />the following activities</h3>
         <ul>
           <li>Full day coverage</li>
           <li>Ceremony</li>
@@ -96,17 +88,13 @@
         <ul>
           <li>1 Photographers</li>
           <li>1 Videographers</li>
-          <li>70 pages 12X30 Album <br />- Glass top wood</li>
+          <li>70 pages 12X30 Album <br />Glass top wood</li>
           <li>1 Signature frame</li>
           <li>1 12x18 frame</li>
           <li>1 Blu-rays</li>
           <li>2 DVDs</li>
         </ul>
-      </div>
-      <div class="bronze-more">
-        <h3>You will also receive the following activities</h3>
-      </div>
-      <div class="bronze-activities">
+        <h3>You will also receive <br />the following activities</h3>
         <ul>
           <li>Full day coverage</li>
           <li>Ceremony</li>
