Footer tilføjet til underside prices + margin
Der er tilføjet margin til bronze button til mobile

--- a/prices.html
+++ b/prices.html
@@ -26,7 +26,7 @@
     </div>
     <section class="prices">
       <div class="silver-package">
-        <h3>Silver package</h3>
+        <h3>SILVER PACKAGE</h3>
       </div>
       <div class="silver-content">
         <ul>
@@ -54,7 +54,7 @@
         <a href="#">Book now</a>
       </div>
       <div class="gold-package">
-        <h3>gold package</h3>
+        <h3>GOLD PACKAGE</h3>
       </div>
       <div class="gold-content">
         <ul>
@@ -82,7 +82,7 @@
         <a href="#">Book now</a>
       </div>
       <div class="bronze-package">
-        <h3>Bronze package</h3>
+        <h3>BRONZE PACKAGE</h3>
       </div>
       <div class="bronze-content">
         <ul>
@@ -106,6 +106,38 @@
       </div>
       <div class="bronze-a">
         <a href="#">Book now</a>
+      </div>
+    </section>
+    <section class="footer">
+      <div class="contact">
+        <h3>Contact</h3>
+        <div class="text">
+          <p>kcreative289@gmail.com</p>
+          <p>+94 77 783 1310</p>
+          <p>Eachchamoddai 4, Jaffna</p>
+          <p>Sri Lanka</p>
+        </div>
+      </div>
+      <div class="connect">
+        <h3>Connect</h3>
+        <div class="facebook">
+          <a href="https://www.facebook.com/kriscreative" target="_blank"
+            >Facebook</a
+          >
+        </div>
+        <div class="instagram">
+          <a
+            href="https://www.instagram.com/krish.creative/?hl=da"
+            target="_blank"
+            >Instagram</a
+          >
+        </div>
+        <div class="email">
+          <a href="krishcreative@outlook.com" target="_blank">Email</a>
+        </div>
+        <div class="logo-footer">
+          <img src="/images/krishlogo.png" alt="logo" />
+        </div>
       </div>
     </section>
   </body>
