Tilføjelse af billeder + grid
Grid til desktop

--- a/packages.html
+++ b/packages.html
@@ -32,14 +32,14 @@
       </div>
       <div class="engagement">
         <h3>ENGAGEMENT</h3>
-        <img src="/images/engagement.jpeg" alt="Engagement" />
+        <img src="/images/engagement-pic.jpeg" alt="Engagement" />
       </div>
       <div class="engagement-a">
         <a href="#">See more</a>
       </div>
       <div class="ceremony">
         <h3>CEREMONY</h3>
-        <img src="/images/bridephoto.jpeg" alt="Ceremony" />
+        <img src="/images/ceremony.jpeg" alt="Ceremony" />
       </div>
       <div class="ceremony-a">
         <a href="#">See more</a>
