--- a/packages.html
+++ b/packages.html
@@ -25,14 +25,14 @@
     <div class="packages">
       <div class="wedding">
         <h3>WEDDING</h3>
-        <img src="/images/bride.jpeg" alt="Wedding" />
+        <img src="/images/bride-img.png" alt="Wedding" />
       </div>
       <div class="wedding-a">
         <a href="#">See more</a>
       </div>
       <div class="engagement">
         <h3>ENGAGEMENT</h3>
-        <img src="/images/engagement-pic.jpeg" alt="Engagement" />
+        <img src="/images/engagement-pic.png" alt="Engagement" />
       </div>
       <div class="engagement-a">
         <a href="#">See more</a>
@@ -46,7 +46,7 @@
       </div>
       <div class="birthday">
         <h3>BIRTHDAY</h3>
-        <img src="/images/birthday.jpeg" alt="Birthday" />
+        <img src="/images/birthday.png" alt="Birthday" />
       </div>
       <div class="birthday-a">
         <a href="#">See more</a>
