Brødkrummer på siden
Lavet med a href tags + kommentarer i kodningen

--- a/prices.html
+++ b/prices.html
@@ -21,9 +21,16 @@
         <a href="#contact">Contact us</a>
       </div>
     </div>
+    <div class="navguide">
+      <a href="#">home ></a>
+      <a href="#">packages ></a>
+      <a href="#">wedding packages</a>
+    </div>
+    <!--Her begynder indhold på siden-->
     <div class="site-title">
       <h1>WEDDING PACKAGES</h1>
     </div>
+    <!--Her starter container med grid indhold-->
     <section class="prices">
       <div class="silver-package">
         <h3>SILVER PACKAGE</h3>
@@ -108,6 +115,7 @@
         <a href="#">Book now</a>
       </div>
     </section>
+    <!--Her starter footer-->
     <section class="footer">
       <div class="contact">
         <h3>Contact</h3>
