--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -148,6 +148,7 @@
       </div>
     </section>
     <!--Her starter anmeldelser-->
+    <!--Her starter footer-->
     <section class="footer">
       <div class="contact">
         <h3>Contact</h3>
