--- a/packages.html
+++ b/packages.html
@@ -21,6 +21,10 @@
         <a href="#contact">Contact us</a>
       </div>
     </div>
+    <div class="navguide">
+      <a href="#">Home ></a>
+      <a href="#">Packages</a>
+    </div>
     <!--Her starter et grid som indeholder de forskellige begivenheder til packages-->
     <div class="packages">
       <div class="wedding">
@@ -52,6 +56,7 @@
         <a href="#">See more</a>
       </div>
     </div>
+    <!--Her starter footer-->
     <section class="footer">
       <div class="contact">
         <h3>Contact</h3>
