Review sektion + ændringer footer
Indsat en anmedelse og stylet i css + ændringer på footer margin top

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -148,6 +148,14 @@
       </div>
     </section>
     <!--Her starter anmeldelser-->
+    <div class="review">
+      <h3>WHAT OUR CLIENTS SAY</h3>
+      <p>
+        This is one of the best studios I know. I recommend this studio 100%!
+        They are doing a great job!
+      </p>
+      <h4>- Um Surai</h4>
+    </div>
     <!--Her starter footer-->
     <section class="footer">
       <div class="contact">
