Ændret billeder til rigtig størrelse
Slettet tidligere fra mappe, ændret størrelse og sat dem ind igen

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -45,7 +45,7 @@
     <!--Her starter sektionen "latest work" på forsiden-->
     <section class="three-sections">
       <div class="work">
-        <img src="/images/krish-work.jpeg" alt="Our latest work" />
+        <img src="/images/3.png" alt="Our latest work" />
       </div>
       <div class="worktxt">
         <h3>OUR LATEST WORK</h3>
@@ -58,7 +58,7 @@
         <a href="#">See more</a>
       </div>
       <div class="book">
-        <img src="/images/book-shoot-krish.jpeg" alt="Book a shoot" />
+        <img src="/images/1.png" alt="Book a shoot" />
       </div>
       <div class="booktxt">
         <h3>BOOK A SHOOT</h3>
@@ -71,7 +71,7 @@
         <a href="#">Book a shoot</a>
       </div>
       <div class="team">
-        <img src="/images/team-krish.png" alt="Meet the team" />
+        <img src="/images/2.png" alt="Meet the team" />
       </div>
       <div class="teamtxt">
         <h3>MEET THE TEAM</h3>
