Ændring af billede
Slettet billede, redigeret det og sat det ind igen

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -141,7 +141,7 @@
         <img src="/images/photoshootcloseup.jpeg" alt="image" />
       </div>
       <div class="bw-first">
-        <img src="/images/bwcar.jpeg" alt="Wedding shoot" />
+        <img src="/images/bwcaredit.png" alt="Wedding shoot" />
       </div>
       <div class="bw-second">
         <img src="/images/bwkrish.jpeg" alt="Wedding shoot" />
