Linket undersider til hinanden
og ændret nav links a:active farver til var--dark

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -11,13 +11,13 @@
     <!--Her starter containeren som indeholder navbar-->
     <!--Navbar lavet med hjælp fra W3schools: https://www.w3schools.com/howto/howto_css_responsive_header.asp?fbclid=IwAR3dDaXUSJFloyI0Z2lAkwO5eXs36Xa6xRUvvP18-R5EnQQn4Qb5m8ns2fY-->
     <div class="navbar">
-      <a href="#" class="logo">KrishCreative</a>
+      <a href="brugerrejse.html" class="logo">KrishCreative</a>
       <!--Her starter links-->
       <div class="links">
-        <a class="klikbart" href="#">Home</a>
+        <a class="klikbart" href="brugerrejse.html">Home</a>
         <a href="#about">About</a>
         <a href="#gallery">Gallery</a>
-        <a href="#packages">Packages</a>
+        <a href="packages.html">Packages</a>
         <a href="#contact">Contact us</a>
       </div>
     </div>
@@ -68,7 +68,7 @@
         </p>
       </div>
       <div class="book-a">
-        <a href="#">Book a shoot</a>
+        <a href="packages.html">Book a shoot</a>
       </div>
       <div class="team">
         <img src="/images/2.png" alt="Meet the team" />
