--- a/packages.html
+++ b/packages.html
@@ -11,19 +11,19 @@
     <!--Her starter containeren som indeholder navbar-->
     <!--Navbar lavet med hjælp fra W3schools: https://www.w3schools.com/howto/howto_css_responsive_header.asp?fbclid=IwAR3dDaXUSJFloyI0Z2lAkwO5eXs36Xa6xRUvvP18-R5EnQQn4Qb5m8ns2fY-->
     <div class="navbar">
-      <a href="#" class="logo">KrishCreative</a>
+      <a href="brugerrejse.html" class="logo">KrishCreative</a>
       <!--Her starter links-->
       <div class="links">
-        <a class="klikbart" href="#">Home</a>
+        <a class="klikbart" href="brugerrejse.html">Home</a>
         <a href="#about">About</a>
         <a href="#gallery">Gallery</a>
-        <a href="#packages">Packages</a>
+        <a href="packages.html">Packages</a>
         <a href="#contact">Contact us</a>
       </div>
     </div>
     <div class="navguide">
-      <a href="#">Home ></a>
-      <a href="#">Packages</a>
+      <a href="brugerrejse.html">Home ></a>
+      <a href="packages.html">Packages</a>
     </div>
     <!--Her starter et grid som indeholder de forskellige begivenheder til packages-->
     <div class="packages">
@@ -32,28 +32,28 @@
         <img src="/images/bride-img.png" alt="Wedding" />
       </div>
       <div class="wedding-a">
-        <a href="#">See more</a>
+        <a href="prices.html">See more</a>
       </div>
       <div class="engagement">
         <h3>ENGAGEMENT</h3>
         <img src="/images/engagement-pic.png" alt="Engagement" />
       </div>
       <div class="engagement-a">
-        <a href="#">See more</a>
+        <a href="prices.html">See more</a>
       </div>
       <div class="ceremony">
         <h3>CEREMONY</h3>
         <img src="/images/ceremony.jpeg" alt="Ceremony" />
       </div>
       <div class="ceremony-a">
-        <a href="#">See more</a>
+        <a href="prices.html">See more</a>
       </div>
       <div class="birthday">
         <h3>BIRTHDAY</h3>
         <img src="/images/birthday.png" alt="Birthday" />
       </div>
       <div class="birthday-a">
-        <a href="#">See more</a>
+        <a href="prices.html">See more</a>
       </div>
     </div>
     <!--Her starter footer-->
