--- a/prices.html
+++ b/prices.html
@@ -11,20 +11,20 @@
     <!--Her starter containeren som indeholder navbar-->
     <!--Navbar lavet med hjælp fra W3schools: https://www.w3schools.com/howto/howto_css_responsive_header.asp?fbclid=IwAR3dDaXUSJFloyI0Z2lAkwO5eXs36Xa6xRUvvP18-R5EnQQn4Qb5m8ns2fY-->
     <div class="navbar">
-      <a href="#" class="logo">KrishCreative</a>
+      <a href="brugerrejse.html" class="logo">KrishCreative</a>
       <!--Her starter links-->
       <div class="links">
-        <a class="klikbart" href="#">Home</a>
+        <a class="klikbart" href="brugerrejse.html">Home</a>
         <a href="#about">About</a>
         <a href="#gallery">Gallery</a>
-        <a href="#packages">Packages</a>
+        <a href="packages.html">Packages</a>
         <a href="#contact">Contact us</a>
       </div>
     </div>
     <div class="navguide">
-      <a href="#">home ></a>
-      <a href="#">packages ></a>
-      <a href="#">wedding packages</a>
+      <a href="brugerrejse.html">home ></a>
+      <a href="packages.html">packages ></a>
+      <a href="prices.html">wedding packages</a>
     </div>
     <!--Her begynder indhold på siden-->
     <div class="site-title">
