--- a/packages.html
+++ b/packages.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Packages | Krish Creative</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!--Her starter containeren som indeholder navbar-->
     <!--Navbar lavet med hjælp fra W3schools: https://www.w3schools.com/howto/howto_css_responsive_header.asp?fbclid=IwAR3dDaXUSJFloyI0Z2lAkwO5eXs36Xa6xRUvvP18-R5EnQQn4Qb5m8ns2fY-->
     <div class="navbar">
-      <a href="brugerrejse.html" class="logo">KrishCreative</a>
+      <a href="brugerrejse.html" class="logo">KRISH CREATIVE</a>
       <!--Her starter links-->
       <div class="links">
         <a class="klikbart" href="brugerrejse.html">Home</a>
