--- a/prices.html
+++ b/prices.html
@@ -16,7 +16,7 @@
       <div class="links">
         <a class="klikbart" href="brugerrejse.html">Home</a>
         <a href="#about">About</a>
-        <a href="#gallery">Gallery</a>
+        <a href="gallery.html">Gallery</a>
         <a href="packages.html">Packages</a>
         <a href="#contact">Contact us</a>
       </div>
