Skiftet billeder ud
+ Slettet de gamle pga forkerte størrelser

--- a/gallery.html
+++ b/gallery.html
@@ -36,10 +36,10 @@
         <img src="/images/culturel.jpeg" alt="Wedding photography" />
       </div>
       <div class="gallerythird">
-        <img src="/images/bride-img.png" alt="Engagement photography" />
+        <img src="/images/bride-new.png" alt="Engagement photography" />
       </div>
       <div class="galleryfourth">
-        <img src="/images/bridesmaides.jpeg" alt="Engagement photography" />
+        <img src="/images/bridesmaides-new.png" alt="Engagement photography" />
       </div>
     </section>
   </body>
