Titler skrevet til guide sektion
Rigtig tekst skrevet til guide sektionen

--- a/brugerrejse.html
+++ b/brugerrejse.html
@@ -86,7 +86,7 @@
       <!--Hvert punkt inddeles i en div-->
       <div class="firstguide">
         <h1>01.</h1>
-        <h3>Lorem ipsum dolor sit amet.</h3>
+        <h3>Get in touch.</h3>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
           asperiores, quis consequatur, eaque nobis optio perspiciatis illum
@@ -96,7 +96,7 @@
       </div>
       <div class="secondguide">
         <h1>02.</h1>
-        <h3>Lorem ipsum dolor sit amet.</h3>
+        <h3>Quotation email sent.</h3>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
           asperiores, quis consequatur, eaque nobis optio perspiciatis illum
@@ -106,7 +106,7 @@
       </div>
       <div class="thirdguide">
         <h1>03.</h1>
-        <h3>Lorem ipsum dolor sit amet.</h3>
+        <h3>Consultation meeting.</h3>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
           asperiores, quis consequatur, eaque nobis optio perspiciatis illum
@@ -116,7 +116,7 @@
       </div>
       <div class="fourthguide">
         <h1>04.</h1>
-        <h3>Lorem ipsum dolor sit amet.</h3>
+        <h3>Booking confirmed.</h3>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
           asperiores, quis consequatur, eaque nobis optio perspiciatis illum
